--- a/css/style.css
+++ b/css/style.css
@@ -65,15 +65,25 @@ body{
 #weather-data h2{
     display: flex;
     justify-content: center;
+    margin-bottom: 0.6rem;
 
 }
 
 #weather-data h2 i{
+    margin: 1rem;
+}
+#weather-data span{
     margin: 0.6rem;
 }
 
 #country{
-    height: 15px;
+   
+}
+
+#description{
+    font-weight: bold;
+    text-transform: capitalize;
+
 }
 
 .description-container{
